# p-t-well-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  motor.cpp  motor.h  save.cpp  save.h  well-monitor.cpp
client/: CMakeLists.txt  Message.h  PID.cpp  client.cpp  client.ino  motor.cpp  motor.h  reading.cpp  reading.h
cmd/: awm.bat  find_pico.py  serial_listener.py
host/: CMakeLists.txt  host.cpp  reading.h
installer/: main.iss
pico-program/client/: PID.h  reading.cpp  reading.h
pico-program/host/: Addresser.h  client.cpp  client.h  host.ino  reading.cpp
website/: main.html
website/p-t-well-monitor/: index.html  package-lock.json  package.json
website/p-t-well-monitor/src/: App.jsx
website/p-t-well-monitor/src/pages/AppNotFound/: AppNotFound.jsx
